iscale-dev/clients/pchc/pas6/pas6-network.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: VPC Setup for PAS6
Metadata:
  AWS::CloudFormation::Interface: 
    ParameterGroups:
      - Label:
          default: Resource Configuration
        Parameters:
          - Name
          - OrgName
          - EnvName
      - Label:
          default: Network Configuration
        Parameters:
          - VpcCidrBlock
          - CidrCount
          - MaskSize
          - LogRetentionPeriod
          - MultiAz
          - CreateLocalDNS
          - CreatePrivate
          - CreateMultipleNatGateway
      - Label:
          default: Subnet Indexes
        Parameters:
          - PublicSubnet1Index
          - PublicSubnet2Index
          - PrivateSubnet1Index
          - PrivateSubnet2Index
          - InternalSubnet1Index
          - InternalSubnet2Index
      - Label:
          default: Jump Host
        Parameters:
          - CreateJumpHost
          - JumpHostAMI
          - JumpHostHostname
          - HostedZoneStackName
    ParameterLabels:
      Name:
        default: Resource Name
      OrgName:
        default: Organization Name
      EnvName:
        default: Environment Name
      VpcCidrBlock:
        default: VPC CIDR Block
      CidrCount:
        default: CIDR Count
      MaskSize:
        default: Mask Size
      LogRetentionPeriod:
        default: Log Retention Period
      MultiAz:
        default: Multiple Availability Zones
      CreateJumpHost:
        default: Create Jump Host
      CreateLocalDNS:
        default: Create Local Hosted Zone
      CreatePrivate:
        default: Create Private Subnets
      CreateMultipleNatGateway:
        default: Create Multiple Nat Gateways
      JumpHostAMI:
        default: Jump host AMI
      JumpHostHostname:
        default: Jump host hostname (e.g. jump)
      HostedZoneStackName:
        default: Hosted Zone stack name (to determine domain name of the jump host FQDN)
      PublicSubnet1Index:
        default: Public Subnet 1 CIDR Index
      PublicSubnet2Index:
        default: Public Subnet 2 CIDR Index
      PrivateSubnet1Index:
        default: Private Subnet 1 CIDR Index
      PrivateSubnet2Index:
        default: Private Subnet 2 CIDR Index
      InternalSubnet1Index:
        default: Internal Subnet 1 CIDR Index
      InternalSubnet2Index:
        default: Internal Subnet 2 CIDR Index

Parameters: 
  Name:
    Description: Unique name/identifier (Can be client name or resource name).
    Type: String
    Default: pas6
    MinLength: 3
    MaxLength: 13
  OrgName:
    Description: The name of the organization.
    Type: String
    Default: pchc
    AllowedPattern: "^[a-z]+(-[a-z]+)*$"
    ConstraintDescription: Organization must only contain lowercase letters, numbers and hyphen.
    MaxLength: 12
  EnvName:
    Description: The name of the environment
    Type: String
    Default: Production
    AllowedValues:
      - Production
      - Staging
      - Development
      - Test
  VpcCidrBlock:
    Description: The CIDR block for the VPC (e.g. 10.0.0.0/23)
    Type: String
    AllowedPattern: '((\d{1,3})\.){3}\d{1,3}/\d{1,2}'
  CidrCount:
    Description: The number of CIDR to generate from the VPC CIDR Block
    Type: Number
    Default: 6
    MinValue: 1
    MaxValue: 256
  MaskSize:
    Description: The number of subnet bits for the CIDR (e.g. specifying a value "8" for this parameter will create a CIDR with a mask of "/24")
    Type: Number
    Default: 6
  LogRetentionPeriod:
    Description: The number of days to retain the log events in the specified log group
    Type: Number
    Default: 365
    AllowedValues: [1, 3, 5, 7, 14, 30, 60, 90, 120, 150, 180, 365, 400, 545, 731, 1827, 3653]
  MultiAz:
    Description: Creates resources on multiple availability zones
    Type: String
    Default: true
    AllowedValues:
      - true
      - false
  CreateJumpHost:
    Description: Creates resources for a jump host into the private network
    Type: String
    Default: false
    AllowedValues:
      - true
      - false
  CreateLocalDNS:
    Description: Set to true to create a local hosted zone tied to the VPC
    Type: String
    Default: false
    AllowedValues:
      - true
      - false
  CreatePrivate:
    Description: Set to true if creation of private subnet is enabled, this creates a Nat Gateway. Otherwise, disabled.
    Type: String
    Default: false
    AllowedValues:
      - true
      - false
  CreateMultipleNatGateway:
    Description: |
      Set to true to create a separate Nat Gateway for each private subnets. Otherwise, it will create only one Nat Gateway for both private subnets. 
      This will only be applied if CreatePrivate is set to true.
    Type: String
    Default: false
    AllowedValues:
      - true
      - false
  JumpHostAMI:
    Description: Jump host AMI ID
    Type: AWS::EC2::Image::Id
    Default: ami-0f511ead81ccde020
  JumpHostHostname:
    Description: Jump host hostname (optional)
    Type: String
    Default: ''
  HostedZoneStackName:
    Description: HostedZone stack name (optional)
    Type: String
    Default: ''
  PublicSubnet1Index:
    Description: CIDR Index for Public Subnet 1
    Type: Number
    Default: 0
  PublicSubnet2Index:
    Description: CIDR Index for Public Subnet 2
    Type: Number
    Default: 1
  PrivateSubnet1Index:
    Description: CIDR Index for Private Subnet 1
    Type: Number
    Default: 2
  PrivateSubnet2Index:
    Description: CIDR Index for Private Subnet 2
    Type: Number
    Default: 3
  InternalSubnet1Index:
    Description: CIDR Index for Internal Subnet 1
    Type: Number
    Default: 4
  InternalSubnet2Index:
    Description: CIDR Index for Internal Subnet 2
    Type: Number
    Default: 5

Mappings: 
  Fn::Transform:
    Name: AWS::Include
    Parameters:
      Location: s3://iscale-dev-cloudformation/include/mappings.yaml

Conditions:
  Fn::Transform:
    Name: AWS::Include
    Parameters:
      Location: s3://iscale-dev-cloudformation/include/conditions.yaml
  IsUsEast: !Equals [!Ref 'AWS::Region', us-east-1]
  IsMultiAz: !Equals [!Ref MultiAz, true]
  IsCreateJumpHost: !Equals [!Ref CreateJumpHost, true]
  IsCreateJumpHostDynDNS: !And [Condition: IsCreateJumpHost, !Not [!Equals [!Ref JumpHostHostname, '']], !Not [!Equals [!Ref HostedZoneStackName, '']]]
  IsCreateLocalDNS: !Equals [!Ref CreateLocalDNS, true]
  IsCreatePrivate: !Equals [!Ref CreatePrivate, true]
  IsCreateMultipleNatGateway: !Equals [!Ref CreateMultipleNatGateway, true]
  IsEitherMultiAzOrPrivate: !Or [Condition: IsMultiAz, Condition: IsCreatePrivate]
  IsMultiAzAndPrivate: !And [Condition: IsMultiAz, Condition: IsCreatePrivate]
  IsMultiAzPrivateAndCreateMultipleNatGateway: !And [Condition: IsMultiAzAndPrivate, Condition: IsCreateMultipleNatGateway]

Resources:

####
# VPC Section
####

# Actual VPC
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCidrBlock
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], !Ref Name, vpc]]

# Default Security Group
  DefaultSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], !Ref Name, default, security, group]]
      GroupDescription: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], !Ref Name, default, security, group]]
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], !Ref Name, default, security, group]]

  VPCEndpointSecurityGroup:
    Condition: IsCreatePrivate
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], !Ref Name, vpc, endpoint]]
      GroupDescription: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], !Ref Name, vpc, endpoint]]
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: !Ref VpcCidrBlock
      Tags:
        - Key: Name
          Value: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], !Ref Name, vpc, endpoint]]

# Default Route Table
  DefaultRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], !Ref Name, default, route, table]]

# Default Network ACLs
  DefaultNetworkAcl:
    Type: AWS::EC2::NetworkAcl
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], !Ref Name, default, nacl]]

# Default Network ACL Entries
  DefaultNetworkAclEntryIngress:
    Type: AWS::EC2::NetworkAclEntry
    Properties: 
      CidrBlock: 0.0.0.0/0
      Egress: false
      NetworkAclId: !Ref DefaultNetworkAcl
      PortRange: 
        From: 0
        To: 0
      Protocol: -1
      RuleAction: allow
      RuleNumber: 100

  DefaultNetworkAclEntryEgress:
    Type: AWS::EC2::NetworkAclEntry
    Properties: 
      CidrBlock: 0.0.0.0/0
      Egress: true
      NetworkAclId: !Ref DefaultNetworkAcl
      PortRange: 
        From: 0
        To: 0
      Protocol: -1
      RuleAction: allow
      RuleNumber: 100

# Default Network ACL Subnets
  PublicSubnetNetworkAclAssociation1:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties: 
      NetworkAclId: !Ref DefaultNetworkAcl
      SubnetId: !Ref PublicSubnet1

  PublicSubnetNetworkAclAssociation2:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Condition: IsMultiAz
    Properties: 
      NetworkAclId: !Ref DefaultNetworkAcl
      SubnetId: !Ref PublicSubnet2

  PrivateSubnetNetworkAclAssociation1:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Condition: IsCreatePrivate
    Properties: 
      NetworkAclId: !Ref DefaultNetworkAcl
      SubnetId: !Ref PrivateSubnet1

  PrivateSubnetNetworkAclAssociation2:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Condition: IsMultiAzAndPrivate
    Properties: 
      NetworkAclId: !Ref DefaultNetworkAcl
      SubnetId: !Ref PrivateSubnet2 

  InternalSubnetNetworkAclAssociation1:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties: 
      NetworkAclId: !Ref DefaultNetworkAcl
      SubnetId: !Ref InternalSubnet1

  InternalSubnetNetworkAclAssociation2:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Condition: IsMultiAz
    Properties: 
      NetworkAclId: !Ref DefaultNetworkAcl
      SubnetId: !Ref InternalSubnet2

# DHCP Options
  DhcpOptions:
    Type: AWS::EC2::DHCPOptions
    Properties: 
      DomainName: !If [IsUsEast, ec2.internal, !Sub '${AWS::Region}.compute.internal'] 
      DomainNameServers: 
        - AmazonProvidedDNS
      NtpServers: 
        - 169.254.169.123
      Tags:
        - Key: Name
          Value: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], !Ref Name, dhcp, options]]

  DhcpOptionsAssociation:
    Type: AWS::EC2::VPCDHCPOptionsAssociation
    Properties: 
      DhcpOptionsId: !Ref DhcpOptions
      VpcId: !Ref VPC

# This create subnets for 2 AZs only if MultiAZ is enabled

# Public Subnet (AZ1)
  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select
        - 0
        - Fn::GetAZs: !Ref 'AWS::Region'
      VpcId: !Ref VPC
      CidrBlock: !Select [ !Ref PublicSubnet1Index, !Cidr [!Ref VpcCidrBlock, !Ref CidrCount, !Ref MaskSize]]
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], !Ref Name, public, subnet, a]]

# Public Subnet (AZ2)
  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Condition: IsMultiAz
    Properties:
      AvailabilityZone: !Select
        - 1
        - Fn::GetAZs: !Ref 'AWS::Region'
      VpcId: !Ref VPC
      CidrBlock: !Select [ !Ref PublicSubnet2Index, !Cidr [!Ref VpcCidrBlock, !Ref CidrCount, !Ref MaskSize]]
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], !Ref Name, public, subnet, b]]

# Private Subnet (AZ1)
  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Condition: IsCreatePrivate
    Properties:
      AvailabilityZone: !Select
        - 0
        - Fn::GetAZs: !Ref 'AWS::Region'
      VpcId: !Ref VPC
      CidrBlock: !Select [ !Ref PrivateSubnet1Index, !Cidr [!Ref VpcCidrBlock, !Ref CidrCount, !Ref MaskSize]]
      Tags:
        - Key: Name
          Value: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], !Ref Name, private, subnet, a]]

# Private Subnet (AZ2)
  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Condition: IsMultiAzAndPrivate
    Properties:
      AvailabilityZone: !Select
        - 1
        - Fn::GetAZs: !Ref 'AWS::Region'
      VpcId: !Ref VPC
      CidrBlock: !Select [ !Ref PrivateSubnet2Index, !Cidr [!Ref VpcCidrBlock, !Ref CidrCount, !Ref MaskSize]]
      Tags:
        - Key: Name
          Value: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], !Ref Name, private, subnet, b]]

# Internal Subnet (AZ1)
  InternalSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select
        - 0
        - Fn::GetAZs: !Ref 'AWS::Region'
      VpcId: !Ref VPC
      CidrBlock: !Select [ !Ref InternalSubnet1Index, !Cidr [!Ref VpcCidrBlock, !Ref CidrCount, !Ref MaskSize]]
      Tags:
        - Key: Name
          Value: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], !Ref Name, internal, subnet, a]]

# Internal Subnet (AZ2)
  InternalSubnet2:
    Type: AWS::EC2::Subnet
    Condition: IsMultiAz
    Properties:
      AvailabilityZone: !Select
        - 1
        - Fn::GetAZs: !Ref 'AWS::Region'
      VpcId: !Ref VPC
      CidrBlock: !Select [ !Ref InternalSubnet2Index, !Cidr [!Ref VpcCidrBlock, !Ref CidrCount, !Ref MaskSize]]
      Tags:
        - Key: Name
          Value: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], !Ref Name, internal, subnet, b]]

# Internet Gateway
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], !Ref Name, gateway]]

  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

# Public Route Table
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], !Ref Name, public, route, table]]

  PublicRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicRouteTableAssociationPublicSubnet1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet1
      RouteTableId: !Ref PublicRouteTable

  PublicRouteTableAssociationPublicSubnet2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Condition: IsMultiAz
    Properties:
      SubnetId: !Ref PublicSubnet2
      RouteTableId: !Ref PublicRouteTable

# Nat Gateway
  NatGatewayElasticIp1:
    Type: AWS::EC2::EIP
    Condition: IsCreatePrivate
    DependsOn: InternetGateway
    Properties:
      Domain: vpc

  NatGateway1:
    Type: AWS::EC2::NatGateway
    Condition: IsCreatePrivate
    Properties: 
      AllocationId: !GetAtt NatGatewayElasticIp1.AllocationId
      SubnetId: !Ref PublicSubnet1
      Tags:
        - Key: Name
          Value: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], !Ref Name, nat, a]]

  NatGatewayElasticIp2:
    Type: AWS::EC2::EIP
    Condition: IsMultiAzPrivateAndCreateMultipleNatGateway
    DependsOn: InternetGateway
    Properties:
      Domain: vpc

  NatGateway2:
    Type: AWS::EC2::NatGateway
    Condition: IsMultiAzPrivateAndCreateMultipleNatGateway
    Properties: 
      AllocationId: !GetAtt NatGatewayElasticIp2.AllocationId
      SubnetId: !Ref PublicSubnet2
      Tags:
        - Key: Name
          Value: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], !Ref Name, nat, b]]

# Private Route Table

# Private Route Table (AZ1)
  PrivateRouteTable1:
    Type: AWS::EC2::RouteTable
    Condition: IsCreatePrivate
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], !Ref Name, private, route, table, a]]

  PrivateRoute1:
    Type: AWS::EC2::Route
    Condition: IsCreatePrivate
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway1

  PrivateRouteTableAssociationPrivateSubnet1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Condition: IsCreatePrivate
    Properties:
      SubnetId: !Ref PrivateSubnet1
      RouteTableId: !Ref PrivateRouteTable1

# Private Route Table (AZ2)
  PrivateRouteTable2:
    Type: AWS::EC2::RouteTable
    Condition: IsMultiAzAndPrivate
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], !Ref Name, private, route, table, b]]

  PrivateRoute2:
    Type: AWS::EC2::Route
    Condition: IsMultiAzAndPrivate
    Properties:
      RouteTableId: !Ref PrivateRouteTable2
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !If [ IsCreateMultipleNatGateway , !Ref NatGateway2, !Ref NatGateway1]

  PrivateRouteTableAssociationPrivateSubnet2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Condition: IsMultiAzAndPrivate
    Properties:
      SubnetId: !Ref PrivateSubnet2
      RouteTableId: !Ref PrivateRouteTable2

# Internal Route Table

  InternalSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref InternalSubnet1
      RouteTableId: !Ref DefaultRouteTable

  InternalSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Condition: IsMultiAz
    Properties:
      SubnetId: !Ref InternalSubnet2
      RouteTableId: !Ref DefaultRouteTable

# Flow Log

  VPCFlowLog:
    Type: AWS::EC2::FlowLog
    Properties: 
      DeliverLogsPermissionArn: !GetAtt FlowLogIamRole.Arn
      LogGroupName: !Ref FlowLogLogGroup
      ResourceId: !Ref VPC
      ResourceType: VPC
      TrafficType: ALL

###
# Jump Host
###

  JumpHostRole:
    Condition: IsCreateJumpHost
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service: ec2.amazonaws.com
            Action:
              - sts:AssumeRole
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/service-role/AmazonEC2RoleforSSM

  JumpHostInstanceProfile:
    Condition: IsCreateJumpHost
    Type: AWS::IAM::InstanceProfile
    Properties:
      Path: '/'
      Roles:
        - !Ref JumpHostRole

  JumpHostSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref VPC
      GroupDescription: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], !Ref Name, jump, host, security, group]]
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], !Ref Name, jump, host, security, group]]

  JumpHost:
    Condition: IsCreateJumpHost
    Type: AWS::EC2::Instance
    Properties:
      # KeyName: iannis-pchc #!Ref KeyName
      InstanceType: t3.nano
      ImageId: !Ref JumpHostAMI
      IamInstanceProfile: !Ref JumpHostInstanceProfile
      DisableApiTermination: false
      NetworkInterfaces:
        - DeviceIndex: 0
          GroupSet: 
            - !Ref JumpHostSecurityGroup
          SubnetId: !Ref PublicSubnet1
      Tags:
        - Key: Name
          Value: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], !Ref Name, jump, host]]

  JumpHostDynDNSStack:
    Condition: IsCreateJumpHostDynDNS
    Type: AWS::CloudFormation::Stack
    Properties:
      TemplateURL: https://iscale-dev-cloudformation.s3-us-west-2.amazonaws.com/common/auto-dns.yaml
      Parameters:
        Name: !Ref Name
        EnvName: !Ref EnvName
        OrgName: !Ref OrgName
        EC2InstanceId: !Ref JumpHost
        HostedZoneStackName: !Ref HostedZoneStackName
        RecordFQDN: !Join
          - '.'
          - - !Ref JumpHostHostname
            - !ImportValue
                'Fn::Sub': '${HostedZoneStackName}-HostedZoneDomainName'

####
# CloudWatch Section
####

# FlowLog Log Group
  FlowLogLogGroup:
    DeletionPolicy: Retain
    Type: AWS::Logs::LogGroup
    Properties:
      RetentionInDays: !Ref LogRetentionPeriod
      LogGroupName: !Join ['/', ['/vpc', !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], !Ref Name, vpc]], vpc-flow-log-group]]

####
# IAM Section
####

  FlowLogIamRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Sid: 1
            Effect: Allow
            Action: sts:AssumeRole
            Principal:
              Service: vpc-flow-logs.amazonaws.com
      Policies:
        - PolicyName: FlowLogPolicy
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Sid: 1
                Effect: Allow
                Action:
                  - logs:CreateLogStream
                  - logs:PutLogEvents
                Resource: '*'

####
# VPC Endpoints
####

  SSMVPCEndpoint:
    Condition: IsCreatePrivate
    Type: AWS::EC2::VPCEndpoint
    Properties:
      PrivateDnsEnabled: true
      SecurityGroupIds:
        - !Ref VPCEndpointSecurityGroup
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.ssm'
      SubnetIds:
        - !Ref PrivateSubnet1
        - !Ref PrivateSubnet2
      VpcEndpointType: Interface
      VpcId: !Ref VPC

  SSMMessagesVPCEndpoint:
    Condition: IsCreatePrivate
    Type: AWS::EC2::VPCEndpoint
    Properties:
      PrivateDnsEnabled: true
      SecurityGroupIds:
        - !Ref VPCEndpointSecurityGroup
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.ssmmessages'
      SubnetIds:
        - !Ref PrivateSubnet1
        - !Ref PrivateSubnet2
      VpcEndpointType: Interface
      VpcId: !Ref VPC

  LogVPCEndpoint:
    Condition: IsCreatePrivate
    Type: AWS::EC2::VPCEndpoint
    Properties:
      PrivateDnsEnabled: true
      SecurityGroupIds:
        - !Ref VPCEndpointSecurityGroup
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.logs'
      SubnetIds:
        - !Ref PrivateSubnet1
        - !Ref PrivateSubnet2
      VpcEndpointType: Interface
      VpcId: !Ref VPC

  EC2MessagesVPCEndpoint:
    Condition: IsCreatePrivate
    Type: AWS::EC2::VPCEndpoint
    Properties:
      PrivateDnsEnabled: true
      SecurityGroupIds:
        - !Ref VPCEndpointSecurityGroup
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.ec2messages'
      SubnetIds:
        - !Ref PrivateSubnet1
        - !Ref PrivateSubnet2
      VpcEndpointType: Interface
      VpcId: !Ref VPC
  
  S3VPCEndpoint:
    Condition: IsCreatePrivate
    Type: AWS::EC2::VPCEndpoint
    Properties:
      SecurityGroupIds:
        - !Ref VPCEndpointSecurityGroup
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.s3'
      SubnetIds:
        - !Ref PrivateSubnet1
        - !Ref PrivateSubnet2
      VpcEndpointType: Interface
      VpcId: !Ref VPC

  LocalHostedZone: 
    Type: AWS::Route53::HostedZone
    Condition: IsCreateLocalDNS
    Properties:
      HostedZoneConfig:
        Comment: !Join [' ',[Local Hosted Zone for, !Ref Name, VPC, '-' , !Ref VPC]]
      Name: !Join ['.', [!Ref Name, 'local']]
      VPCs:
        - VPCId: !Ref VPC
          VPCRegion: !Ref 'AWS::Region'
      HostedZoneTags:
        - Key: Name
          Value: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], !Ref Name,local,dns]]

Outputs:
  VpcId: 
    Description: The ID of the VPC
    Value: !Ref VPC
    Export:
      Name: !Sub '${AWS::StackName}-VpcId'

  VpcCidrBlock: 
    Description: The Cidr Block of the VPC
    Value: !Ref VpcCidrBlock
    Export:
      Name: !Sub '${AWS::StackName}-VpcCidrBlock'

  PublicSubnetId1: 
    Description: Public Subnet ID for AZ1
    Value: !Ref PublicSubnet1
    Export:
      Name: !Sub '${AWS::StackName}-PublicSubnetId1'

  PublicSubnetId2: 
    Condition: IsMultiAz
    Description: Public Subnet ID for AZ2
    Value: !Ref PublicSubnet2
    Export:
      Name: !Sub '${AWS::StackName}-PublicSubnetId2'

  PublicSubnetIds:
    Condition: IsMultiAz
    Description: Public Subnet Ids
    Value: !Join [',', [!Ref PublicSubnet1, !Ref PublicSubnet2]]
    Export:
      Name: !Sub '${AWS::StackName}-PublicSubnetIds'

  PrivateSubnetId1: 
    Condition: IsCreatePrivate
    Description: Private Subnet ID for AZ1
    Value: !Ref PrivateSubnet1
    Export:
      Name: !Sub '${AWS::StackName}-PrivateSubnetId1'

  PrivateSubnetId2: 
    Condition: IsMultiAzAndPrivate
    Description: Private Subnet ID for AZ2
    Value: !Ref PrivateSubnet2
    Export:
      Name: !Sub '${AWS::StackName}-PrivateSubnetId2'

  PrivateSubnetIds:
    Condition: IsMultiAzAndPrivate
    Description: Private Subnet Ids
    Value: !Join [',', [!Ref PrivateSubnet1, !Ref PrivateSubnet2]]
    Export:
      Name: !Sub '${AWS::StackName}-PrivateSubnetIds'

  InternalSubnetId1: 
    Description: Internal Subnet ID for AZ1
    Value: !Ref InternalSubnet1
    Export:
      Name: !Sub '${AWS::StackName}-InternalSubnetId1'

  InternalSubnetId2: 
    Condition: IsMultiAz
    Description: Internal Subnet ID for AZ2
    Value: !Ref InternalSubnet2
    Export:
      Name: !Sub '${AWS::StackName}-InternalSubnetId2'

  InternalSubnetIds:
    Condition: IsMultiAz
    Description: Internal Subnet Ids
    Value: !Join [',', [!Ref InternalSubnet1, !Ref InternalSubnet2]]
    Export:
      Name: !Sub '${AWS::StackName}-InternalSubnetIds'

  InternetGateway:
    Description: Internet Gateway
    Value: !Ref InternetGateway
    Export:
      Name: !Sub '${AWS::StackName}-InternetGateway'

  LocalHostedZoneId:
    Condition: IsCreateLocalDNS
    Description: Local Hosted Zone ID
    Value: !Ref LocalHostedZone
    Export:
      Name: !Sub '${AWS::StackName}-LocalHostedZoneId'

  NatGateway1:
    Condition: IsCreatePrivate
    Description: NAT Gateway for AZ1
    Value: !Ref NatGateway1
    Export:
      Name: !Sub '${AWS::StackName}-NatGateway1'

  NatGateway2:
    Condition: IsMultiAzPrivateAndCreateMultipleNatGateway
    Description: NAT Gateway for AZ2
    Value: !Ref NatGateway2
    Export:
      Name: !Sub '${AWS::StackName}-NatGateway2'

  PublicRouteTable:
    Description: Public Route Table
    Value: !Ref PublicRouteTable
    Export:
      Name: !Sub '${AWS::StackName}-PublicRouteTable'

  PrivateRouteTable1:
    Condition: IsCreatePrivate
    Description: Private Route Table for AZ1
    Value: !Ref PrivateRouteTable1
    Export:
      Name: !Sub '${AWS::StackName}-PrivateRouteTable1'

  PrivateRouteTable2:
    Condition: IsMultiAzAndPrivate
    Description: Private Route Table for AZ2
    Value: !Ref PrivateRouteTable2
    Export:
      Name: !Sub '${AWS::StackName}-PrivateRouteTable2'

  DefaultSecurityGroupId:
    Description: Default VPC Security Group
    Value: !GetAtt  DefaultSecurityGroup.GroupId
    Export:
      Name: !Sub '${AWS::StackName}-DefaultSecurityGroupId'

  JumpHostSecurityGroupId:
    Description: Jump Host Security Group
    Value: !Ref JumpHostSecurityGroup
    Export:
      Name: !Sub '${AWS::StackName}-JumpHostSecurityGroupId'

  Region:
    Description: VPC Region
    Value: !Ref 'AWS::Region'
    Export:
      Name: !Sub '${AWS::StackName}-Region'
